[package]
name = "secrets"
version = "0.1.0"
authors = ["zydiig <me@baka.cafe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0.2"
byteorder = "1.3.2"
base64 = "0.11.0"
regex = "^1"
serde_json = "^1.0"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
bindgen = "0.51.1"