[package]
name = "secrets"
version = "0.1.0"
authors = ["zydiig <me@baka.cafe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
base64 = "0.11.0"
serde_json = "^1.0"
serde = { version = "1.0", features = ["derive"] }
strum = "0.17.1"
strum_macros = "0.17.1"
failure = "0.1.6"
failure_derive = "0.1.6"
regex = "^1"
lazy_static = "1.4.0"
clap = "3.0.0-beta.2"
once_cell = "1.5.2"
[build-dependencies]
bindgen = "0.51.1"